# VortexLake

./: .gitignore  Cargo.toml  DEBUG_GUIDE.md  LICENSE  README.md  rust-toolchain.toml  simple_test.rs  simple_vec_test  simple_vec_test.rs  test_vec.rs
.cursor/rules/: codep.mdc
crates/vortexlake-core/: Cargo.toml
crates/vortexlake-core/src/: config.rs  fragment.rs  lib.rs  manifest.rs  reader.rs  schema.rs  writer.rs
crates/vortexlake-core/src/compression/: lz4.rs  mod.rs  zstd.rs
crates/vortexlake-core/tests/: e2e_vortex_storage.rs
crates/vortexlake-index/: Cargo.toml
crates/vortexlake-index/src/: diskann.rs  ivf_pq.rs  lib.rs  metadata_index.rs
crates/vortexlake-ingest/: Cargo.toml
crates/vortexlake-ingest/examples/: recall_demo.rs  splitter_demo.rs
crates/vortexlake-ingest/src/: lib.rs  models.rs  pipeline.rs
crates/vortexlake-ingest/src/eval/: coherence.rs  mod.rs  relevance.rs  suite.rs
crates/vortexlake-ingest/src/metadata/: extractor.rs  hierarchy.rs  mod.rs
crates/vortexlake-ingest/src/splitter/: agentic.rs  hierarchical.rs  llm_rerank.rs  mod.rs  proposition.rs  splitter_trait.rs
crates/vortexlake-python/: Cargo.toml
crates/vortexlake-python/src/: lib.rs
crates/vortexlake-server/: Cargo.toml
crates/vortexlake-server/src/: lib.rs
crates/vortexlake-sql/: Cargo.toml
crates/vortexlake-sql/benches/: tpch_benchmark.rs
crates/vortexlake-sql/examples/: basic_sql_test.rs  sql_execution_test.rs
crates/vortexlake-sql/src/: execution.rs  file_source.rs  lib.rs  metrics_config.rs  profiling.rs  session.rs  table_provider.rs
crates/vortexlake-sql/tests/: common.rs  metrics_isolation_demo.rs  pruning_tests.rs  session_context_metrics_isolation.rs  tpch_validation.rs  trace_overread.rs
debug_examples/: Cargo.toml
debug_examples/src/: lib.rs  main.rs
docs/: architecture.md  profiling_complete_guide.md  tpch_benchmark.md  tpch_benchmark_2025_12_09.md  tpch_benchmark_2025_12_22.md  tpch_benchmark_common.md  vortex_metrics_isolation_implementation_review.md  zonemap_pruning_implementation_review.md
examples/: benchmark_compress.rs  hybrid_query.rs  rag_ingest.rs
