[package]
name = "vortexlake-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "gRPC and REST server for VortexLake"

[dependencies]
tokio.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

# HTTP server
axum = "0.7"
tower = "0.4"
tower-http = "0.5"

# gRPC
tonic = "0.11"
prost = "0.12"

# Local dependencies
vortexlake-core = { path = "../vortexlake-core" }
vortexlake-sql = { path = "../vortexlake-sql" }
